# PW_Hw2

./: dockerfile  main.py  requirements.txt
progect_head/: pyproject.toml
